--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Varad Bhogayata | Software Developer</title>
+  <title>Xinyu Wu | Software Developer</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -35,10 +35,10 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Varad Bhogayata | Software Developer" />
+  <meta property="og:title" content="Xinyu Wu | Software Developer" />
   <meta property="og:description" content="Software Developer" />
   <meta property="og:url" content="https://varadbhogayata.github.io/" />
-  <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
+  <meta property="og:site_name" content="Xinyu Wu | Software Developer" />
   <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
   <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
   <!-- Twitter -->
@@ -47,7 +47,7 @@
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Developer" />
   <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
-  <meta name="author" content="Varad Bhogayata" />
+  <meta name="author" content="Xinyu Wu" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href="https://varadbhogayata.github.io/assets/resume/Varad_Bhogayata_Resume.pdf" target="_blank"
+        <a aria-label="Open Xinyu's resume in a new tab" href="https://wuxinyu519/portfolio/assets/resume/CV_XinyuWu.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -209,18 +209,18 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Varad Bhogayata.</span></h2>
+              <h2>Hi, I'm <span class="teal">Xinyu Wu.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
+              <h5>Self-driven, quick starter, passionate researcher with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
+              <a href="https://www.linkedin.com/in/xinyu-wu-34a116278/" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
               </a>
-              <a href="https://github.com/varadbhogayata/" target="_blank">
+              <a href="https://github.com/wuxinyu519" target="_blank">
                 <button class="icon-btn github">
                   <i class="fa fa-github"></i>
                 </button>
